”rails課題１のスケジュール管理アプリの作成。見本のサイトと見た目は違うが仕様の要件は満たしていると思います。 ”

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <header>
+      <div class="header">
+        <p class="header-text">Rails スケジュール管理アプリ</p>
+      </div>
+    </header>
     <%= yield %>
+    <footer>
+    </footer>
   </body>
 </html>
